[tool.poetry]
name = "\"fastapi\""
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
unicorn = "^2.0.1.post1"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
pydentic = "^0.0.1.dev3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
